--- a/app/src/main/res/drawable/radiuscolorshape.xml
+++ b/app/src/main/res/drawable/radiuscolorshape.xml
@@ -5,7 +5,7 @@
         android:radius="40dp"
         />
     <solid
-        android:color="@color/butt"
+        android:color="@color/df"
         ></solid>
 
 </shape>
