--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -141,7 +141,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/radiuscolorshape"
-        android:backgroundTint="@color/background3"
         android:paddingHorizontal="20dp"
         android:paddingVertical="10dp"
         android:layout_margin="10dp"
@@ -215,7 +214,7 @@
             app:layout_constraintVertical_bias="1"
             app:layout_constraintHorizontal_bias="0"
             android:layout_marginBottom="5dp"
-            android:tint="@color/text1"
+            android:tint="@color/white"
             android:padding="5dp"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_media"
@@ -251,7 +250,7 @@
             android:id="@+id/send"
             android:padding="5dp"
             android:background="@android:color/transparent"
-            android:tint="@color/butt"
+            android:tint="@color/white"
             android:scaleType="centerCrop"
 
 
@@ -268,8 +267,8 @@
             android:layout_marginHorizontal="10dp"
             android:hint="Nhập tin nhắn..."
            android:backgroundTint="@android:color/transparent"
-            android:textColor="@color/text1"
-            android:textColorHint="@color/text2"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
             android:textStyle="bold"
             android:textSize="15sp"
             android:id="@+id/emessage"
