--- a/app/src/main/res/layout/fragment_friend.xml
+++ b/app/src/main/res/layout/fragment_friend.xml
@@ -14,6 +14,7 @@
         android:backgroundTint="@color/background3"
         android:layout_margin="10dp"
         android:id="@+id/searchview"
+        android:visibility="gone"
         >
      <ImageButton
          android:layout_width="40dp"
@@ -54,7 +55,7 @@
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/searchview"
+        app:layout_constraintTop_toBottomOf="@id/searchbut"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/phanloai"
@@ -117,8 +118,9 @@
     </RadioGroup>
    <ProgressBar
        android:layout_width="match_parent"
-       android:layout_height="30dp"
+       android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/phanloai"
+       app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/progressbar"
@@ -152,6 +154,49 @@
     android:id="@+id/danhsachtrong">
 
 </TextView>
+    <SearchView
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="@id/title"
+        app:layout_constraintHorizontal_bias="1"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:paddingVertical="10dp"
+        android:id="@+id/searchbut"
+        android:layout_marginVertical="10dp"
+        android:layout_marginHorizontal="25dp"
+        app:layout_constraintTop_toBottomOf="@id/phanloai"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="visible"
+        android:textColorHint="@color/text1"
+        android:queryHint="Tìm kiếm..."
+        app:iconifiedByDefault="true"
+        android:elevation="10dp"
+        android:background="@drawable/radiusitembox"
+        android:backgroundTint="@color/background2"
+        android:queryBackground="@color/background2"
+
+
+        />
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text="Yaooooo!"
+        android:autoSizeTextType="uniform"
+        app:layout_constraintTop_toTopOf="@id/searchbut"
+        app:layout_constraintBottom_toBottomOf="@id/searchbut"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textAlignment="textStart"
+        android:textColor="@color/df"
+        android:fontFamily="@font/font1"
+        android:letterSpacing="0.05"
+        android:layout_marginStart="22dp"
+        android:lines="1"
+        android:background="@android:color/transparent"
+        android:textStyle="bold"
+        >
+    </TextView>
 
 
 
