--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -52,7 +52,7 @@
     <color name="background3">#bbbbbb</color>
     <color name="text1">#000000</color>
     <color name="text2">#484848</color>
-    <color name="butt">#01579B</color>
+    <color name="butt">#039BE5</color>
 
 
 
