--- a/app/src/main/res/layout/item_chat_layout.xml
+++ b/app/src/main/res/layout/item_chat_layout.xml
@@ -7,10 +7,13 @@
     app:cardCornerRadius="25dp"
     android:layout_margin="5dp"
     android:backgroundTint="@color/background1"
+
     >
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingHorizontal="5dp"
+        android:paddingVertical="10dp">
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
@@ -49,7 +52,8 @@
             android:layout_marginEnd="10dp"
             android:text="Status"
             android:id="@+id/status"
-            android:textSize="15sp"
+            android:textSize="12sp"
+            android:textStyle="italic"
             ></TextView>
 
         <TextView
