--- a/app/src/main/res/layout/item_friend_layout.xml
+++ b/app/src/main/res/layout/item_friend_layout.xml
@@ -10,7 +10,9 @@
     >
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingVertical="10dp"
+        >
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
@@ -58,14 +60,17 @@ app:layout_constraintBottom_toTopOf="@id/function"
             android:layout_marginEnd="10dp"
             android:text="Status"
             android:id="@+id/status"
-            android:textSize="15sp"
+            android:textSize="12sp"
+            android:textStyle="italic"
             ></TextView>
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/function"
             app:layout_constraintTop_toBottomOf="@id/phone"
-app:layout_constraintStart_toStartOf="parent"            app:layout_constraintEnd_toEndOf="parent"
+app:layout_constraintStart_toStartOf="parent"
+            android:paddingHorizontal="2dp"
+            app:layout_constraintEnd_toEndOf="parent"
             >
 
             <Button
@@ -74,8 +79,8 @@ app:layout_constraintStart_toStartOf="parent"            app:layout_constraintEn
                 android:text="Thêm bạn"
                 android:layout_weight="1"
                 android:textSize="8sp"
-                android:textColor="@color/text1"
-                android:backgroundTint="@color/background3"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/df"
                 android:id="@+id/btnadd"
                 >
             </Button>
@@ -86,12 +91,9 @@ app:layout_constraintStart_toStartOf="parent"            app:layout_constraintEn
                 android:id="@+id/btncancel"
                 android:layout_weight="1"
                 android:textSize="8sp"
-                android:textColor="@color/text1"
-                android:backgroundTint="@color/background3"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/df"
                 android:layout_marginStart="2dp"
-
-
-
                 >
 
             </Button>
@@ -102,12 +104,9 @@ app:layout_constraintStart_toStartOf="parent"            app:layout_constraintEn
                 android:layout_weight="1"
                 android:textSize="8sp"
                 android:id="@+id/btnchat"
-                android:backgroundTint="@color/background3"
-                android:textColor="@color/text1"
+                android:backgroundTint="@color/df"
+                android:textColor="@color/white"
                 android:layout_marginStart="2dp"
-
-
-
                 >
 
             </Button>
@@ -118,8 +117,8 @@ app:layout_constraintStart_toStartOf="parent"            app:layout_constraintEn
                 android:layout_weight="1"
                 android:textSize="8sp"
                 android:id="@+id/btnwall"
-                android:backgroundTint="@color/background3"
-                android:textColor="@color/text1"
+                android:backgroundTint="@color/df"
+                android:textColor="@color/white"
                 android:layout_marginStart="2dp"
 
 
@@ -135,9 +134,9 @@ app:layout_constraintStart_toStartOf="parent"            app:layout_constraintEn
                 android:layout_weight="1"
                 android:textSize="8sp"
                 android:id="@+id/btnblock"
-                android:backgroundTint="@color/background3"
-                android:textColor="@color/text1"
-android:layout_marginHorizontal="2dp"
+                android:backgroundTint="@color/df"
+                android:textColor="@color/white"
+                android:layout_marginHorizontal="2dp"
                 >
 
             </Button>
@@ -149,7 +148,6 @@ android:layout_marginHorizontal="2dp"
             app:layout_constraintEnd_toEndOf="@id/function"
             app:layout_constraintStart_toStartOf="@id/function"
             app:layout_constraintBottom_toBottomOf="@id/function"
-            android:background="?android:attr/colorBackground"
             android:id="@+id/progressbarfunction"
             android:visibility="gone"
             >
