--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,18 +13,17 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="150dp"
-
         >
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintHeight_percent="0.3"
+            app:layout_constraintHeight_percent="0.4"
             app:layout_constraintTop_toTopOf="parent"
             android:src="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:scaleType="centerCrop"
             android:id="@+id/background">
-
         </ImageView>
         <de.hdodenhof.circleimageview.CircleImageView
             android:layout_width="150dp"
@@ -51,7 +50,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:textAlignment="center"
-            android:text="Username"
+            android:text="..."
             android:textStyle="bold"
             android:layout_marginTop="10dp"
             android:id="@+id/username"
@@ -68,8 +67,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:textAlignment="center"
-            android:text="Description"
-
+            android:text="..."
             android:layout_marginTop="10dp"
             android:id="@+id/description"
             >
@@ -88,7 +86,7 @@
             android:textColor="@color/dark_green"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/description"
-            android:visibility="visible"
+            android:visibility="gone"
             ></TextView>
 
         <LinearLayout
@@ -102,6 +100,7 @@
             android:id="@+id/estatus"
             android:layout_gravity="center"
             android:gravity="center"
+            android:visibility="gone"
             >
             <Button
                 android:layout_width="wrap_content"
@@ -132,11 +131,10 @@
                 android:id="@+id/btnblock">
 
             </Button>
-
         </LinearLayout>
         <androidx.recyclerview.widget.RecyclerView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/estatus"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
