--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -1,15 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@+id/swipeRefresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragment.MenuFragment">
-<androidx.constraintlayout.widget.ConstraintLayout
+    tools:context=".Fragment.MenuFragment"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
+<androidx.core.widget.NestedScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
+ >
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:paddingBottom="150dp"
+
 
 
 >
@@ -50,64 +56,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:textAlignment="center"
-        android:text="Username"
+        android:text="..."
         android:textStyle="bold"
         android:layout_marginTop="10dp"
         android:id="@+id/username"
         >
     </TextView>
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/background"
-        app:layout_constraintEnd_toEndOf="@id/background"
-        android:src="@drawable/ic_edit"
-        android:background="@android:color/transparent"
-        android:layout_margin="15dp"
-        android:tint="@color/df"
-        android:id="@+id/editback"
 
-        ></ImageButton>
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="@id/avatar"
-        app:layout_constraintStart_toStartOf="@id/avatar"
-        app:layout_constraintEnd_toEndOf="@id/avatar"
-
-        android:src="@drawable/ic_edit"
-        android:background="@android:color/transparent"
-        android:layout_margin="15dp"
-        android:tint="@color/df"
-        android:id="@+id/editavatar"
-
-        ></ImageButton>
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toEndOf="@id/username"
-        app:layout_constraintTop_toTopOf="@id/username"
-        app:layout_constraintBottom_toBottomOf="@id/username"
-        android:src="@drawable/ic_edit"
-        android:background="@android:color/transparent"
-        android:layout_margin="15dp"
-        android:tint="@color/df"
-        android:id="@+id/editname"
-
-        ></ImageButton>
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="@id/description"
-        app:layout_constraintBottom_toBottomOf="@id/description"
-        app:layout_constraintStart_toEndOf="@id/description"
-        android:src="@drawable/ic_edit"
-        android:background="@android:color/transparent"
-        android:layout_margin="15dp"
-        android:tint="@color/df"
-        android:id="@+id/editdes"
-
-        ></ImageButton>
 
 
     <TextView
@@ -120,7 +75,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:textAlignment="center"
-        android:text="Description"
+        android:text="..."
         android:layout_marginTop="10dp"
         android:id="@+id/description"
         >
@@ -155,21 +110,66 @@ app:layout_constraintTop_toBottomOf="@id/nighttheme"
     android:text="Xem trang cá nhân"
         android:backgroundTint="@color/df"
         />
-
-
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/btnwall"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/btneditavatar"
+        android:layout_margin="10dp"
+        android:textColor="@color/white"
+        android:text="Đổi Avatar"
+        android:backgroundTint="@color/df"
+        />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/btneditavatar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/btneditbackground"
+        android:layout_margin="10dp"
+        android:textColor="@color/white"
+        android:text="Đổi Background"
+        android:backgroundTint="@color/df"
+        />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/btneditbackground"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/btneditname"
+        android:layout_margin="10dp"
+        android:textColor="@color/white"
+        android:text="Đổi tên"
+        android:backgroundTint="@color/df"
+        />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/btneditname"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/btneditdes"
+        android:layout_margin="10dp"
+        android:textColor="@color/white"
+        android:text="Đổi mô tả"
+        android:backgroundTint="@color/df"
+        />
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/btneditdes"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/btnchangepass"
         android:textColor="@color/white"
         android:layout_margin="10dp"
         android:backgroundTint="@color/df"
-
         android:text="Đổi mật khẩu"/>
-
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -182,8 +182,6 @@ app:layout_constraintTop_toBottomOf="@id/nighttheme"
         android:layout_margin="10dp"
         android:text="Đăng xuất"/>
 
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
